tests/instantiating/range_invalid_type/stderr.golden
error: range property must be of type integer, range or [range], current type string
bus.fbd +2:20
   |
 2 | 	C config; range = "str"
   | 	                  ^^^^^
